# HolyGraphPlotter

./: README.md  gl_framework.cpp  shader_util.cpp
week 4/: CMakeLists.txt  Makefile  main.cpp
week0:C++/: Entity_Manager.cpp  README.md
week1:GLSL/: CMakeLists.txt  README.md  glInit.cpp
week2:Triangle/: CMakeLists.txt  Makefile  README.md  fshader.glsl  main.cpp  triangle  vshader.glsl
week3:3dCube/: Makefile  README.md  cube  fshader.glsl  main.cpp  vshader.glsl
week3:3dCube/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cube
week3:3dCube/build-test/: CMakeCache.txt
week4:RubicksCube/: CMakeLists.txt  Makefile  README.md  cube  fshader.glsl  gl_framework.cpp  main.cpp  vshader.glsl
week5:GLSL_Deep_Dive/: CMakeLists.txt  README.md  fshader.glsl  main.cpp  vshader.glsl
week5:Phong/: CMakeLists.txt  Makefile  README.md  fshader.glsl  main.cpp  phong  vshader.glsl
week6:SurfacePlotter/: CMakeLists.txt  Makefile  README.md  fshader.glsl  main.cpp  surface  vshader.glsl
week7:ExprDSL/: CMakeLists.txt  Makefile  README.md  expr.hpp  expr_demo  main.cpp
week8:Plotter/: CMakeLists.txt  Makefile  README.md  equation.txt  fshader.glsl  gl_framework.cpp  gl_framework.hpp  main.cpp  parser.cpp  parser.hpp  plotter  vshader.glsl
